objects/CMPL123QMS__Harm_Code__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__SoH_Score__c</fullName>
        <label>SoH Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Harm Code</label>
    <listViews>
        <fullName>CMPL123QMS__All_Harm_Code</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Short_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HCOD-{00000}</displayFormat>
        <label>Harm Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harm Codes</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Harm_Code</fullName>
        <active>true</active>
        <label>Harm Code</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Validation_Rule_for_SoH_Score</fullName>
        <active>true</active>
        <errorConditionFormula>CMPL123QMS__SoH_Score__c &lt; 0</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__SoH_Score__c</errorDisplayField>
        <errorMessage>SoH Score cannot be a negative number</errorMessage>
    </validationRules>
</CustomObject>